# python-boilerplate

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/tests/: test_main.py
tests/: main_test.py  myproject_test.py
