[tool.poetry]
name = "python-boilerplate"
version = "0.1.0"
description = ""
authors = ["Dane Petersen <thegreatsunra@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_boilerplate"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
