[tool.poetry]
name = "python-boilerplate"
version = "1.3.0"
description = ""
authors = ["Dane Petersen <thegreatsunra@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"
pytest = "^7.2.2"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
