[tool.poetry]
authors = ["Dane Petersen <thegreatsunra@gmail.com>"]
description = ""
license = "MIT"
name = "python-boilerplate"
readme = "README.md"
repository = "https://github.com/thegreatsunra/python-boilerplate"
version = "2.0.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"
pytest = "^7.2.2"

[tool.mypy]
mypy_path = "src"

# Helps Pylance correctly report import errors outside src/
[tool.pyright]
include = ["src"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
